fix header colored box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,11 @@ button:active {
     line-height: 4.5rem;
     font-size: 1.25rem;
     transition: all ease-in-out .5s;
+    margin: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 
 .project__description--container p {
@@ -279,6 +284,11 @@ button:active {
 }
 
 .skills__header {
+    margin: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     padding-top: 25px;
     text-align: center;
     line-height: 4.5rem;
